[package]
name = "canon-looper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "canon-looper"
path = "src/main.rs"
test = false
doctest = false
bench = false


[dependencies]
daisy-embassy = { git = "https://github.com/Dicklessgreat/daisy-embassy", default-features = false, features = ["seed_1_2"]}
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-futures = "0.1.1"
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
stm32-fmc = "0.3.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.0", features = ["device"] }

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "ca3d091faf3ef76ea45f88eea5c2a6700378daff" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "ca3d091faf3ef76ea45f88eea5c2a6700378daff" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "ca3d091faf3ef76ea45f88eea5c2a6700378daff" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "ca3d091faf3ef76ea45f88eea5c2a6700378daff" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "ca3d091faf3ef76ea45f88eea5c2a6700378daff" }

[patch."https://github.com/Dicklessgreat/daisy-embassy"]
daisy-embassy = { git = "https://github.com/finnh-dev/daisy-embassy.git", branch = "make-overrun-recoverable" }

[profile.dev]
opt-level = "s"
codegen-units = 1
